Fixes Project boxes alignment.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -180,6 +180,10 @@
   display: inline-block; 
 }
 
+.profile-card .profile-info .desc {
+  height: 200px;
+}
+
 .heading{
   text-align: center;
   text-transform: uppercase;
